# telegram_bot

./: .pre-commit-config.yaml  AnimatedSticker.tgs  README.md  bot.py  keep_alive.py  log.txt  main.py  pyproject.toml  requirements.txt  tokens.py
utils/: parser.py
