[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyowm = "^3.1.1"
pyTelegramBotAPI = "^3.8.1 "
flask = "^1.1.2"
beautifulsoup4 = "4.9.3"
lxml="4.6.3"
keyboa="3.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
